--- a/themes/distinctionpp/layouts/partials/after-footer.html
+++ b/themes/distinctionpp/layouts/partials/after-footer.html
@@ -1,11 +1,11 @@
 {{- $default_highlightjs_js := "//cdnjs.cloudflare.com/ajax/libs/highlight.js/%VERSION%/highlight.min.js" }}
 {{- $default_highlightjs_css := "//cdnjs.cloudflare.com/ajax/libs/highlight.js/%VERSION%/styles/%STYLE%.min.css" }}
 {{- $default_highlightjs_lang := "//cdnjs.cloudflare.com/ajax/libs/highlight.js/%VERSION%/languages/%LANG%.min.js" }}
-{{- $default_mathjax_js := "//unpkg.com/mathjax@3/es5/tex-mml-chtml.js" }}
-{{- $default_katex_js := "///unpkg.com/katex@latest/dist/katex.min.js" }}
-{{- $default_katex_css := "//unpkg.com/katex@latest/dist/katex.min.css" }}
-{{- $default_katex_autorender := "//unpkg.com/katex@latest/dist/contrib/auto-render.min.js" }}
-{{- $default_chartjs_js := "//unpkg.com/chart.js@latest/dist/chart.umd.js" }}
+{{- $default_mathjax_js := "https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js" }}
+{{- $default_katex_js := "https://cdn.jsdelivr.net/npm/katex/+esm" }}
+{{- $default_katex_css := "https://cdn.jsdelivr.net/npm/katex/dist/katex.min.css" }}
+{{- $default_katex_autorender := "https://cdn.jsdelivr.net/npm/katex/dist/contrib/auto-render.min.js" }}
+{{- $default_chartjs_js := "https://cdn.jsdelivr.net/npm/chart.js/dist/chart.umd.min.js" }}
 <script type="module">
 {{- "// import * as Popper from \"@popperjs/core\";" | safeJS }}
 {{- "// import * as bootstrap from \"bootstrap\";" | safeJS }}
