--- a/themes/distinctionpp/layouts/partials/head.html
+++ b/themes/distinctionpp/layouts/partials/head.html
@@ -10,7 +10,7 @@
   {{- end -}}
   {{- with $.Site.Params }}{{ with .favicon }}
   <link rel="icon" href='{{ . }}' />{{ end }}{{ end }}
-  {{- $bootstrap_css := "//unpkg.com/bootstrap@latest/dist/css/bootstrap.min.css" }}
+  {{- $bootstrap_css := "https://cdn.jsdelivr.net/npm/bootstrap/dist/css/bootstrap.min.css" }}
   {{- if $.Site.Params.bootstrap }}
   <link rel="stylesheet" href='{{ $.Site.Params.bootstrap.css | default $bootstrap_css | safeURL }}' crossorigin="anonymous" />
   {{- else }}
@@ -33,17 +33,17 @@
   {{- if and $.Site.Params.mermaid $.Site.Params.mermaid.js }}
     "mermaid": "{{ $.Site.Params.mermaid.js | safeJS }}",
   {{- else }}
-    "mermaid": "//unpkg.com/mermaid@latest/dist/mermaid.esm.min.mjs",
+    "mermaid": "https://cdn.jsdelivr.net/npm/mermaid/+esm",
   {{- end }}
   {{- if and $.Site.Params.bootstrap $.Site.Params.bootstrap.js }}
     "bootstrap": "{{ $.Site.Params.bootstrap.js | safeJS }}",
   {{- else }}
-    "bootstrap": "//unpkg.com/bootstrap@latest/dist/js/bootstrap.esm.min.js",
+    "bootstrap": "https://cdn.jsdelivr.net/npm/bootstrap/+esm",
   {{- end }}
   {{- if and $.Site.Params.bootstrap $.Site.Params.bootstrap.popper $.Site.Params.bootstrap.popper.js }}
     "@popperjs/core": "{{ $.Site.Params.bootstrap.popper.js | safeJS }}"
   {{- else }}
-    "@popperjs/core": "{{ $.Site.Params.bootstrap.popper.js | safeJS }}"
+    "@popperjs/core": "https://cdn.jsdelivr.net/npm/popper.js/+esm"
   {{- end }}
     {{- end }}
   {{- end }}
