--- a/themes/distinctionpp/layouts/partials/head.html
+++ b/themes/distinctionpp/layouts/partials/head.html
@@ -19,7 +19,7 @@
   <link rel="stylesheet" href='{{ $.Site.BaseURL }}/css/style.css' />
   {{- if $.Site.Params.css }}
     {{- range $.Site.Params.css }}
-  <link rel="stylesheet" href='{{ . | absURL }}' />
+  <link rel="stylesheet" href='{{ . | safeURL | absURL }}' />
     {{- end }}
   {{- end }}
 <script type="importmap">
@@ -28,20 +28,20 @@
   {{- with $.Site.Params.modules }}
     {{- with .importmap }}
   {{- range $k, $v := . }}
-    "{{ $k }}": "{{ $v }}",
+    "{{ $k }}": {{ $v | jsonify }},
   {{- end }}
   {{- if and $.Site.Params.mermaid $.Site.Params.mermaid.js }}
-    "mermaid": "{{ $.Site.Params.mermaid.js | safeJS }}",
+    "mermaid": {{ $.Site.Params.mermaid.js | jsonify }},
   {{- else }}
     "mermaid": "https://cdn.jsdelivr.net/npm/mermaid/+esm",
   {{- end }}
   {{- if and $.Site.Params.bootstrap $.Site.Params.bootstrap.js }}
-    "bootstrap": "{{ $.Site.Params.bootstrap.js | safeJS }}",
+    "bootstrap": {{ $.Site.Params.bootstrap.js | jsonify }},
   {{- else }}
     "bootstrap": "https://cdn.jsdelivr.net/npm/bootstrap/+esm",
   {{- end }}
   {{- if and $.Site.Params.bootstrap $.Site.Params.bootstrap.popper $.Site.Params.bootstrap.popper.js }}
-    "@popperjs/core": "{{ $.Site.Params.bootstrap.popper.js | safeJS }}"
+    "@popperjs/core": {{ $.Site.Params.bootstrap.popper.js | jsonify }}
   {{- else }}
     "@popperjs/core": "https://cdn.jsdelivr.net/npm/popper.js/+esm"
   {{- end }}
