--- a/themes/distinctionpp/layouts/shortcodes/chart.html
+++ b/themes/distinctionpp/layouts/shortcodes/chart.html
@@ -1,3 +1,4 @@
+{{ .Page.Store.Set "themeExtensionHasChartJs" true }}
 {{ if .IsNamedParams }}
 <canvas id="{{ .Get "id" | default (printf "chartjs-chart-%d" .Ordinal) | safeHTMLAttr }}" {{ with .Get "class" }} class="{{ . | safeHTMLAttr }}" {{ end }}>{{ .Get "alt" | default (printf "Chart %d" .Ordinal) | safeHTML }}</canvas>{{ if .Inner }}<script type="text/javascript">
 document.addEventListener('DOMContentLoaded', (event) => {
